Update Logo Image

--- a/guides.html
+++ b/guides.html
@@ -27,7 +27,7 @@
         <!-- Sidebar  -->
         <nav id="sidebar" class="top-margin">
             <div>
-                <img src="Images/Logo/AE_Logo.PNG" style="width:100%">
+                <img src="Images/Logo/AE_Logo.png" style="width:100%">
             </div>
             <div class="sidebar-header">
                 <h3>AEGuides</h3>
