Updated Background for quest Cards

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -164,7 +164,7 @@
             <!-- Main Content -->
             <div>
               <!-- Start of Welcome to Ashen Empires -->
-              <div class="card bg-secondary half-width mb-5">
+              <div class="card bg-main half-width mb-5">
                 <div class="card-header">
                   <h2 id="welcomeToAshenEmpires" class="anchor text-center">Welcome To Ashen Empires</h2>
                 </div>
