--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
             <div class="body-line"></div>
             <article>
+              <small class="article-date" >Zarquon 10/14/2020</small> <br>
+              <ul>
+                <li>Quest Stages now expand</li>
+              </ul>
+            </article>
+            
+            <div class="body-line"></div>
+            <article>
               <small class="article-date" >FujiQ 10/12/2020</small> <br>
               <ul>
                 <li>Adjust for follower/party code to determine credit for kill count/alignment purposes</li>
