--- a/index.html
+++ b/index.html
@@ -88,7 +88,22 @@
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
             <div class="body-line"></div>
             <article>
-              <small class="article-date" >Zarquon 10/14/2020</small> <br>
+              <small class="article-date" >FujiQ 10/18/2020</small> <br>
+              <ul>
+                <li>Uploaded PVP server adjust to first aid healing (will use a stasis/pause instead of timer). <br>PVE server will continue to use timers in lieu of stasis </li>
+                <li>Minos dungeon traps set back to how they were until I can fix them properly with a visual cue, etc.</li>
+              </ul>
+            </article>
+            <div class="body-line"></div>            
+            <article>
+              <small class="article-date" >Zarquon 10/17/2020 [Client Only]</small> <br>
+              <ul>
+                <li>Quest Stages are not retained during character switch</li>
+              </ul>
+            </article>
+            <div class="body-line"></div>            
+            <article>
+              <small class="article-date" >Zarquon 10/14/2020 [Client Only]</small> <br>
               <ul>
                 <li>Quest Stages now expand</li>
               </ul>
@@ -595,6 +610,25 @@
                               <li>2 Rune Shards</li>
                               <li>1 Jail Pardon</li>
                               <li>3 Drop Rate Increase</li>
+                          </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="panel panel-default">
+                    <div class="panel-heading accordion-border">
+                      <h5 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse7">
+                        November 2020</a>
+                      </h5>
+                    </div>
+                    <div id="collapse7" class="panel-collapse collapse">
+                      <div class="panel-body accordion-border">
+                          <ul class="light-grey-text">
+                              <li>3 Item Rename</li>
+                              <li>1 Chest of Holding</li>
+                              <li>2 Summon Corpse</li>
+                              <li>1 Item Restore Tool</li>
+                              <li>4 Personal Power Hour</li>
                           </ul>
                       </div>
                     </div>
