--- a/quest.html
+++ b/quest.html
@@ -108,59 +108,59 @@
               </tr>
               <tr>
                 <td class="hover"><a href="valinorQuest.html#kumbaPendant">Kumba's Pendant</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr>
               <tr>
                 <td class="hover"><a href="valinorQuest.html#strangeFascination">Strange Fascination</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr>  
               <tr">
                 <td class="hover"><a href="valinorQuest.html#theNecklace">The Necklace</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr>
               <tr>
                 <td class="hover"><a href="valinorQuest.html#ourLittleSpiderProblem">Our Little Spider Problem</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr>
               <tr>
                 <td class="hover"><a href="valinorQuest.html#theRing">The Ring</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr> 
               <tr>
                 <td class="hover"><a href="valinorQuest.html#proof">Proof</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr> 
               <tr>
                 <td class="hover"><a href="valinorQuest.html#frumpTheCook">Frump the Cook</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr> 
               <tr>
                 <td class="hover"><a href="valinorQuest.html#cloaksToDieFor">Cloaks to Die For</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr> 
               <tr>
                 <td class="hover"><a href="valinorQuest.html#war">War</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr> 
               <tr>
                 <td class="hover"><a href="valinorQuest.html#curtisSecret">Curtis's Secrect</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr> 
               <tr>
                 <td class="hover"><a href="valinorQuest.html#strangeRequest">Strange Request</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr> 
               <tr>
                 <td class="hover"><a href="valinorQuest.html#daveysRattle">Davey's Rattle</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr> 
               <tr>
                 <td class="hover"><a href="valinorQuest.html#aGoblinProblem">A Goblin Problem</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr>
               <tr>
                 <td class="hover"><a href="valinorQuest.html#hellHathNoFury">Hell hath No Fury</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr>             
             </table>
             <table class="table table-sm table-td-bg table-striped table-bordered half-width mb-2">
@@ -176,56 +176,56 @@
               </tr>
               <tr>
                 <td class="hover"><a href="valinorQuest.html#bluntTrainer">Blunts</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr>
               <tr>
                 <td class="hover"><a href="valinorQuest.html#smallBladesTrainer">Small Blades</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr>
               <tr>
                 <td class="hover"><a href="valinorQuest.html#axeWeaponTrainer">Axe</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr>
               <tr>
                 <td class="hover"><a href="valinorQuest.html#polearmsTrainer">Polearms</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr>
               <tr>
                 <td class="hover"><a href="valinorQuest.html#unarmedCombatTrainer">Unarmed Combat</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr>
               <tr>
                 <td class="hover"><a href="valinorQuest.html#archeryTrainer">Bows</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr>
               <tr>
                 <td class="hover"><a href="valinorQuest.html#crossbowTrainer">Crossbows</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr>
               <tr>
                 <td class="hover"><a href="valinorQuest.html#thrownWeaponsTrainer">Thrown</a></td>
-                <td>Aprentice</td>
+                <td>Apprentice</td>
               </tr>              
             </table>
             <div class="line"></div>
 
             <h2 id="silvestQuest" class="anchor">Silvest</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Comeing Soon</p>
 
             <div class="line"></div>
 
             <h3 id="krogQuest" class="anchor">Krog</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Comeing Soon</p>
             
             <div class="line"></div>
             <h3 id="whisperdaleQuest" class="anchor">Whisperdale</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Comeing Soon</p>
         
             <div class="line"></div>
 
             <footer class="jumbotron text-center">
-                <p>Designed by Keith Heffington</p>
-                <p>&copy; <span id="date"></span></p> 
+                <a href="https://keithheffington.com" target="_blank"><p>Designed by Keith Heffington</p></a>
+                <p>&copy;<span id="date"></span></p> 
             </footer>
 
         </div>
