--- a/guides.html
+++ b/guides.html
@@ -98,7 +98,7 @@
 
             <h2 id="townGuide" class="anchor">Town Guides</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <button type="button" class="btn btn-dark"><a href="townGuides.html">Town Guides</a></button>
+            <button type="button" class="btn btn-dark"><a href="#">Town Guides</a></button>
             
             <div class="line"></div>
 
@@ -115,7 +115,7 @@
             <div class="line"></div>
 
             <footer class="jumbotron text-center">
-                <p>Designed by Keith Heffington</p>
+                <a href="https://keithheffington.com" target="_blank"><p>Designed by Keith Heffington</p></a>
                 <p>&copy; <span id="date"></span></p> 
             </footer>
         </div>
