--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -2141,7 +2141,7 @@
               <div class="line"></div>
             
             <footer class="jumbotron text-center">
-                <p>Designed by Keith Heffington</p>
+              <a href="https://keithheffington.com" target="_blank"><p>Designed by Keith Heffington</p></a>
                 <p>&copy; <span id="date"></span></p> 
             </footer>
 
