Updates to pages

--- a/quest.html
+++ b/quest.html
@@ -44,13 +44,43 @@
                             <a href="#valinorQuest">Valinor Quest</a>
                         </li>
                         <li>
-                            <a href="#silvestQuest">Silvest Quest</a>
+                            <a href="#silvestValley">Silvest Valley</a>
                         </li>
                         <li>
-                            <a href="#krogQuest">Krog Quest</a>
+                            <a href="#krythan">Krythan</a>
                         </li>
                         <li>
-                            <a href="#whisperdaleQuest">Whisperdale Quest</a>
+                            <a href="#darkwoods">Darkwoods</a>
+                        </li>
+                        <li>
+                          <a href="#battlePlains">Battle Plains</a>
+                        </li>
+                        <li>
+                          <a href="#blackSwamp">Black Swamp</a>
+                        </li>
+                        <li>
+                          <a href="#highlands">Highlands</a>
+                        </li>
+                        <li>
+                          <a href="#westernIsles">Western Isles</a>
+                        </li>
+                        <li>
+                          <a href="#valleyOfTheGiants">Valley of the Giants</a>
+                        </li>
+                        <li>
+                          <a href="#heartwoodCoast">Heartwood Coast</a>
+                        </li>
+                        <li>
+                          <a href="#tundria">Tundria</a>
+                        </li>
+                        <li>
+                          <a href="#sandsOfCreation">Sands of Creation</a>
+                        </li>
+                        <li>
+                          <a href="#breakwater">Breakwater</a>
+                        </li>
+                        <li>
+                          <a href="#brokenFinger">Broken Finger</a>
                         </li>
                     </ul>
                 </li>
@@ -95,131 +125,74 @@
             <div class="line"></div>
 
             <h2 id="valinorQuest" class="anchor">Valinor</h2>
-            <table class="table table-sm table-td-bg table-striped table-bordered half-width mb-2">
-              <thead class="thead-light">
-                <tr>
-                  <th>Quest</th>
-                  <th>Difficulty</th>
-                </tr>
-              </thead>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#welcomeToAshenEmpires">Welcome To Ashen Empires</a></td>
-                <td>Apprentice</td>
-              </tr>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#kumbaPendant">Kumba's Pendant</a></td>
-                <td>Apprentice</td>
-              </tr>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#strangeFascination">Strange Fascination</a></td>
-                <td>Apprentice</td>
-              </tr>  
-              <tr">
-                <td class="hover"><a href="valinorQuest.html#theNecklace">The Necklace</a></td>
-                <td>Apprentice</td>
-              </tr>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#ourLittleSpiderProblem">Our Little Spider Problem</a></td>
-                <td>Apprentice</td>
-              </tr>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#theRing">The Ring</a></td>
-                <td>Apprentice</td>
-              </tr> 
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#proof">Proof</a></td>
-                <td>Apprentice</td>
-              </tr> 
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#frumpTheCook">Frump the Cook</a></td>
-                <td>Apprentice</td>
-              </tr> 
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#cloaksToDieFor">Cloaks to Die For</a></td>
-                <td>Apprentice</td>
-              </tr> 
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#war">War</a></td>
-                <td>Apprentice</td>
-              </tr> 
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#curtisSecret">Curtis's Secrect</a></td>
-                <td>Apprentice</td>
-              </tr> 
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#strangeRequest">Strange Request</a></td>
-                <td>Apprentice</td>
-              </tr> 
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#daveysRattle">Davey's Rattle</a></td>
-                <td>Apprentice</td>
-              </tr> 
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#aGoblinProblem">A Goblin Problem</a></td>
-                <td>Apprentice</td>
-              </tr>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#hellHathNoFury">Hell hath No Fury</a></td>
-                <td>Apprentice</td>
-              </tr>             
-            </table>
-            <table class="table table-sm table-td-bg table-striped table-bordered half-width mb-2">
-              <thead class="thead-light">
-                <tr>
-                  <th>Weapon Trainers</th>
-                  <th>Difficulty</th>
-                </tr>
-              </thead>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#largeBladeTrainer">Large Blades</a></td>
-                <td>Aprentice</td>
-              </tr>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#bluntTrainer">Blunts</a></td>
-                <td>Apprentice</td>
-              </tr>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#smallBladesTrainer">Small Blades</a></td>
-                <td>Apprentice</td>
-              </tr>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#axeWeaponTrainer">Axe</a></td>
-                <td>Apprentice</td>
-              </tr>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#polearmsTrainer">Polearms</a></td>
-                <td>Apprentice</td>
-              </tr>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#unarmedCombatTrainer">Unarmed Combat</a></td>
-                <td>Apprentice</td>
-              </tr>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#archeryTrainer">Bows</a></td>
-                <td>Apprentice</td>
-              </tr>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#crossbowTrainer">Crossbows</a></td>
-                <td>Apprentice</td>
-              </tr>
-              <tr>
-                <td class="hover"><a href="valinorQuest.html#thrownWeaponsTrainer">Thrown</a></td>
-                <td>Apprentice</td>
-              </tr>              
-            </table>
+            <p>All quest related to the Valinor island</p>
+            <button type="button" class="btn btn-dark"><a href="valinorQuest.html">Valinor Quest</a></button>           
             <div class="line"></div>
 
-            <h2 id="silvestQuest" class="anchor">Silvest</h2>
+            <h2 id="silvestValley" class="anchor">Silvest Valley</h2>
             <p>Comeing Soon</p>
+            <button type="button" class="btn btn-dark"><a href="#">Silvest Vally</a></button> 
 
             <div class="line"></div>
 
-            <h3 id="krogQuest" class="anchor">Krog</h3>
+            <h3 id="krythan" class="anchor">Krythan</h3>
             <p>Comeing Soon</p>
+            <button type="button" class="btn btn-dark"><a href="#">Krythan</a></button>
             
             <div class="line"></div>
-            <h3 id="whisperdaleQuest" class="anchor">Whisperdale</h3>
+            <h3 id="darkwoods" class="anchor">Darkwoods</h3>
             <p>Comeing Soon</p>
+            <button type="button" class="btn btn-dark"><a href="#">Darkwoods</a></button>
+
+            <div class="line"></div>
+            <h3 id="battlePlains" class="anchor">Battle Plains</h3>
+            <p>Comeing Soon</p>
+            <button type="button" class="btn btn-dark"><a href="#">Battle Plains</a></button>
+
+            <div class="line"></div>
+            <h3 id="blackSwamp" class="anchor">Black Swamp</h3>
+            <p>Comeing Soon</p>
+            <button type="button" class="btn btn-dark"><a href="#">Black Swamp</a></button>
+
+            <div class="line"></div>
+            <h3 id="highlands" class="anchor">Highlands</h3>
+            <p>Comeing Soon</p>
+            <button type="button" class="btn btn-dark"><a href="#">Highlands</a></button>
+
+            <div class="line"></div>
+            <h3 id="westernIsles" class="anchor">Western Isles</h3>
+            <p>Comeing Soon</p>
+            <button type="button" class="btn btn-dark"><a href="#">Western Isles</a></button>
+
+            <div class="line"></div>
+            <h3 id="valleyOfTheGiants" class="anchor">Valley of the Giants</h3>
+            <p>Comeing Soon</p>
+            <button type="button" class="btn btn-dark"><a href="#">Vally of the Giants</a></button>
+
+            <div class="line"></div>
+            <h3 id="heartwoodCoast" class="anchor">Heartwood Coast</h3>
+            <p>Comeing Soon</p>
+            <button type="button" class="btn btn-dark"><a href="#">Heartwood Coast</a></button>
+
+            <div class="line"></div>
+            <h3 id="tundria" class="anchor">Tundria</h3>
+            <p>Comeing Soon</p>
+            <button type="button" class="btn btn-dark"><a href="#">Tundria</a></button>
+
+            <div class="line"></div>
+            <h3 id="sandsOfCreation" class="anchor">Sands of Creation</h3>
+            <p>Comeing Soon</p>
+            <button type="button" class="btn btn-dark"><a href="#">Sands of Creation</a></button>
+
+            <div class="line"></div>
+            <h3 id="breakwater" class="anchor">Breakwater</h3>
+            <p>Comeing Soon</p>
+            <button type="button" class="btn btn-dark"><a href="#">Breakwater</a></button>
+
+            <div class="line"></div>
+            <h3 id="brokenFinger" class="anchor">Broken Finger</h3>
+            <p>Comeing Soon</p>
+            <button type="button" class="btn btn-dark"><a href="#">Broken Finger</a></button>
         
             <div class="line"></div>
 
