Corrected Folder Name and Spelling

--- a/quest.html
+++ b/quest.html
@@ -131,7 +131,7 @@
 
             <h2 id="silvestValley" class="anchor">Silvest Valley</h2>
             <p>Comeing Soon</p>
-            <button type="button" class="btn btn-dark"><a href="#">Silvest Vally</a></button> 
+            <button type="button" class="btn btn-dark"><a href="#">Silvest Valley</a></button> 
 
             <div class="line"></div>
 
