--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -167,12 +167,12 @@
                 <div>
                   <div class="card-body img-center">
                     
-                    <img class="img-small" src="images/Valinor/maps/Valinor_Map.png" alt="">
+                    <img class="img-small" src="Images/Valinor/Maps/Valinor_Map.png" alt="Valinor Map">
                     
                     <hr>
-                    <img class="npc-img" src="images/Valinor/Maps/Valinor_Castle.png" alt="">
-                    <img class="npc-img" src="images/Valinor/Maps/Valinor_Castle_Underground.png" alt="">
-                    <img class="npc-img" src="images/Valinor/Maps/Valinor_Castle_Outside.png" alt="">
+                    <img class="npc-img" src="Images/Valinor/Maps/Valinor_Castle.png" alt="Valinor Castle Map">
+                    <img class="npc-img" src="Images/Valinor/Maps/Valinor_Castle_Underground.png" alt="Valinor Castle Underground Map">
+                    <img class="npc-img" src="Images/Valinor/Maps/Valinor_Castle_Outside.png" alt="Valinor Castle Outside Map">
                   </div>                  
                 </div>
                 <div class="card-body">
