Add Image to Images

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -179,20 +179,20 @@
                   <div class="card-body ol-border">
                     <ol>
                       <li class="li-border">1. Duke Randolf</li>
-                      <li>2. Kumba Northern</li>
-                      <li>3. Mary Locksley</li>
-                      <li>4. Douglas Logan</li>
-                      <li>5. Serina Wilcut</li>
-                      <li>6. Shady Looking Man</li>
-                      <li>7. Paula Duncan</li>
-                      <li>8. Imeral Lagost</li>
-                      <li>9. Lorlee Eclain</li>
-                      <li>10. Captain of the Guard</li>
-                      <li>11. Curtis Leabu</li>
-                      <li>12. A Strange Looking Man</li>
-                      <li>13. Davey Logan</li>
-                      <li>14. Timothy Jager</li>
-                      <li>15. A Young Maid</li>
+                      <li class="li-border">2. Kumba Northern</li>
+                      <li class="li-border">3. Mary Locksley</li>
+                      <li class="li-border">4. Douglas Logan</li>
+                      <li class="li-border">5. Serina Wilcut</li>
+                      <li class="li-border">6. Shady Looking Man</li>
+                      <li class="li-border">7. Paula Duncan</li>
+                      <li class="li-border">8. Imeral Lagost</li>
+                      <li class="li-border">9. Lorlee Eclain</li>
+                      <li class="li-border">10. Captain of the Guard</li>
+                      <li class="li-border">11. Curtis Leabu</li>
+                      <li class="li-border">12. A Strange Looking Man</li>
+                      <li class="li-border">13. Davey Logan</li>
+                      <li class="li-border">14. Timothy Jager</li>
+                      <li class="li-border">15. A Young Maid</li>
                     </ol>
                   </div>
                 </div>
