Added New Images for cooking Trainer

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -122,6 +122,29 @@
                       </li>
                   </ul>
               </li>
+              <li>
+                <a href="#tradeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">TradeSkill Trainers</a>
+                <ul class="collapse list-unstyled" id="tradeSubmenu">
+                    <li>
+                        <a href="#cookingTrainer">Cooking Trainer</a>
+                    </li>
+                    <li>
+                        <a href="#leatherworkingTrainer">Leatherworking Trainer</a>
+                    </li>
+                    <li>
+                        <a href="#blackSmithTrainer">Blacksmith Trainer</a>
+                    </li>
+                    <li>
+                        <a href="#carpentryTrainer">Carpentry Trainer</a>
+                    </li>
+                    <li>
+                      <a href="#tailoringTrainer">Tailoring Trainer</a>
+                    </li>
+                    <li>
+                      <a href="#farmingTrainer">Farming Trainer</a>
+                    </li>
+                </ul>
+            </li>
             </ul>
         </nav>
 
@@ -2144,6 +2167,80 @@
             <!-- End of Thrown Weapons Trainer  -->
 
               <div class="line"></div>
+            <!-- Start of Cooking Trainer  -->
+            <div class="card bg-secondary half-width mb-5">
+              <div class="card-header">
+                <h2 id="cookingTrainer" class="anchor text-center">Cooking</h2>
+              </div>
+              <div>
+                <div class="card-body">
+                  <table class="table table-sm table-bordered text-center">
+                    <thead class="thead-light">
+                      <tr>
+                        <th>Difficulty</th>
+                        <th>Skills</th>                            
+                      </thead>    
+                      </tr>
+                      <tr>
+                        <td>Apprentice</td>
+                        <td>Mixing</td>
+                  </table>
+                  <table class="table table-sm table-bordered text-center">
+                    <thead class="thead-light">
+                      <tr>
+                        <th>NPC Quest Start</th>
+                        <th>Reward</th>
+                      </thead>    
+                      </tr>
+                      <tr>
+                        <td>Cooking Trainer</td> 
+                        <td>
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Items/Cookbook.png" alt="Cookbook" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Items/Cookbook_ScreenTip.png' alt='Cookbook'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Items/Cooking_Guidebook.png" alt="Cooking Guidebook" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Items/Cooking_Guidebook_ScreenTip.png' alt='Cooking Guidebook'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Items/Mixing_Bowl.png" alt="Mixing Bowl" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Items/Mixing_Bowl_ScreenTip.png' alt='Mixing Bowl'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Items/Mixing_Spoon.png" alt="Mixing Spoon" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Items/Mixing_Spoon_ScreenTip.png' alt='Mixing Spoon'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Items/Flour.png" alt="Flour" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Items/Flour_Bag_ScreenTip.png' alt='Flour Bag'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Items/Bucket_Full_of_Water.png" alt="Bucket full of water" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Items/Full_Bucket_of_Water_ScreenTip.png' alt='Bucket Full of Water'>">
+                        </td>                        
+                  </table>
+                  <hr>
+                  <p class="clearfix">
+                    <img class="npc-img" src="Images/Valinor/NPCS/Thrown_Weapons_Trainer.png"alt="Thrown Weapons Trainer">
+                    Speak to <span class="light-red">Thrown Weapons Trainer</span>, He will give you a Simple String Sling to complete the task to gain experience by slaying beasts and foul creatures, then return to be rewarded.
+                    <hr>  
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Simple String Sling / 100 Pebbles</span></li>                            
+                        </ul>
+                        <hr>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Weapons Training - Thrown</span><span class="orange">, Venture forth and gain experience with your crossbow.</span>
+                    <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">First task Gain 500 exp in Thrown Weapons</span> <span class="ml-2 green">10 Gold / 100 Pebbles</span></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Second task Gain 700 exp in Thrown Weapons</span> <span class="ml-2 green">25 Gold / 100 Pebbles</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Third task Gain 900 exp in Thrown Weapons</span> <span class="ml-2 green">Braided Sling / 100 Pebbles</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Fourth task Gain 1100 exp in Thrown Weapons</span> <span class="ml-2 green">50 Gold / 100 Pebbles</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Fifth task Gain 1500 exp in Thrown Weapons</span> <span class="ml-2 green">100 Gold / 100 Pebbles</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Sixth task Gain 3000 exp in Thrown Weapons</span> <span class="ml-2 green">150 Gold / 100 Pebbles</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Seventh task Gain 5000 exp in Thrown Weapons</span> <span class="ml-2 green">Shepherds Sling / 100 Pebbles</span></li></li>
+                      </ul>
+                  </p>
+                  <p>
+                    
+                    <br>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Weapons Training - Thrown</span><span class="orange">, Return to the Trainer for your next assignment.</span>
+                  </p>
+                  <p>
+                    <span class="light-red">Thrown Weapons Trainer</span> will welcome you back and for accomplishing the task at hand. He gives you a reward for you efforts.
+                    You have received all the trainging he has to offer. He tells you that once you reach the mianland, seek out Tilis Oakwoven, a Night Elf who lives in Whisperdale for more training.
+                  <br>
+                  You have completed your training in Thrown Weapons.
+                  </p>
+                  <p class="mt-4 py-3 text-center quest-complete">
+                  Quest Complete
+                </p>
+                </div>
+              </div>
+            </div>
+            <!-- End of Thrown Weapons Trainer  -->  
             
             <footer class="jumbotron text-center">
               <a href="https://keithheffington.com" target="_blank"><p>Designed by Keith Heffington</p></a>
