Added Spider Legs Step of Quest.

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -2205,35 +2205,47 @@
                   </table>
                   <hr>
                   <p class="clearfix">
-                    <img class="npc-img" src="Images/Valinor/NPCS/Thrown_Weapons_Trainer.png"alt="Thrown Weapons Trainer">
-                    Speak to <span class="light-red">Thrown Weapons Trainer</span>, He will give you a Simple String Sling to complete the task to gain experience by slaying beasts and foul creatures, then return to be rewarded.
+                    <img class="npc-img" src="Images/Valinor/NPCS/Cooking_Trainer.png"alt="Cooking Trainer">
+                    Speak to <span class="light-red">Cooking Trainer</span>, he will give you a bowl, bucket, spoon, cookbook and a cooking guide book. Everyone has to start with the basics. He gets you started by mixing some bread dough.
                     <hr>  
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Simple String Sling / 100 Pebbles</span></li>                            
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Cookbook</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Cooking Guidebook</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Mixing Bowl</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Mixing Spoon</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Flour Bag</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Full Bucket of Water</span></li>                            
                         </ul>
                         <hr>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Weapons Training - Thrown</span><span class="orange">, Venture forth and gain experience with your crossbow.</span>
-                    <ul>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2">First task Gain 500 exp in Thrown Weapons</span> <span class="ml-2 green">10 Gold / 100 Pebbles</span></li>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Second task Gain 700 exp in Thrown Weapons</span> <span class="ml-2 green">25 Gold / 100 Pebbles</span></li></li>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Third task Gain 900 exp in Thrown Weapons</span> <span class="ml-2 green">Braided Sling / 100 Pebbles</span></li></li>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Fourth task Gain 1100 exp in Thrown Weapons</span> <span class="ml-2 green">50 Gold / 100 Pebbles</span></li></li>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Fifth task Gain 1500 exp in Thrown Weapons</span> <span class="ml-2 green">100 Gold / 100 Pebbles</span></li></li>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Sixth task Gain 3000 exp in Thrown Weapons</span> <span class="ml-2 green">150 Gold / 100 Pebbles</span></li></li>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Seventh task Gain 5000 exp in Thrown Weapons</span> <span class="ml-2 green">Shepherds Sling / 100 Pebbles</span></li></li>
-                      </ul>
-                  </p>
-                  <p>
-                    
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Cooking Training</span><span class="orange">, Return to the Cooking trainer with 10 bread doughs</span>
                     <br>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Weapons Training - Thrown</span><span class="orange">, Return to the Trainer for your next assignment.</span>
+                    You have a few options to learn to make bread dough. The cookbook or the cooking guidebook. Now that you have checked your book on how to make bread dough. Add your<span class="light-green"> Flour Bag & Full Bucket of Water </span>in the <span class="light-green">Mixing Bowl</span>. Your mixing bowl will now be a <span class="light-green">Used Mixing Bowl</span>.<img src="Images/Valinor/Items/Items/Used_Mixing_Bowl.png" alt="Used Mixing Bowl"> To begin mixing use your <span class="light-green">Mixing Spoon</span> on the Used Mixing Bowl.
+                    if you fail you will see the following <span class="red">You did not seem to get the ingredients right. You destroy the mixture.</span> When you do succeed at making the bread dough you will see the following <span class="green">You have made one Bread Dough</span> <img src="Images/Valinor/Items/Items/Bread_Dough.png" alt="Bread Dough">
+                    You are only given 1 Flour Bag; you can buy more from Whiliam Rosen <img class="npc-img" src="Images/Valinor/NPCS/Whiliam_Rosen.png" alt="Whiliam Rosen"> in the Provisioner Shop <img src="Images/Valinor/Items/Items/Provisioner_Shop_Sign.png" alt="Provisioner Shop Sign">.
                   </p>
+                  <p class="clearfix">
+                    Your Full Bucket of water will drop to <span class="light-green">3/4 Bucket of Water</span>, <span class="light-green">1/2 Bucket of Water</span>, <span class="light-green">1/4 Bucket of Water</span>, and to <span class="light-green">Empty Bucket</span>. You can fill your Bucket at any well. <img class="npc-img" src="Images/Valinor/Items/Items/Well.png" alt="Well">        
+                    <br> <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough</span><span class="green"> Bread Dough </span> <span class="orange">to complete the quest</span>. Return to the <span class="light-red">Cooking Trainer</span> to complete your task and start a new one.
+                  </p>
+                  <hr> 
+                    <ul>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">720</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                    </ul>
+                  <hr>
                   <p>
-                    <span class="light-red">Thrown Weapons Trainer</span> will welcome you back and for accomplishing the task at hand. He gives you a reward for you efforts.
-                    You have received all the trainging he has to offer. He tells you that once you reach the mianland, seek out Tilis Oakwoven, a Night Elf who lives in Whisperdale for more training.
-                  <br>
-                  You have completed your training in Thrown Weapons.
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Cooking Training</span><span class="orange">, Return to the Cooking trainer with 10 bread doughs</span> <br>
+                    <span class="light-green">Spider legs</span> can come from <span class="light-red">Spiders</span> <img class="monster-img" src="Images/Valinor/Monsters/Spider.png" alt="Spider"> out side of the castle, or in the basement from the <span class="light-red">Dredge Spiders</span>. <img class="monster-img" src="Images/Valinor/Monsters/Dredge_Spider.png" alt="Dredge Spider"> The Dredge Spiders are the easier ones if you are haveing isusse killing.
+                    Once you have 10 or more Spider Legs head to the Tavern to begin roasting your spider legs. Roasting is a very easy thing to do you click on the spider leg <img src="Images/Valinor/Food/Spider_Leg.png" alt="Spider Leg">
+                    Then click on the oven. <img class="monster-img" src="Images/Valinor/Items/Items/Oven.png" alt="Oven"> At a low level you will fail a few time before you cook all 10 required. When you succeed you will have a <span class="light-green">Cooked Spider Leg</span>. <img src="Images/Valinor/Food/Cooked_Spider_Leg.png" alt="Cooked Spider Leg"> You can cook them one at a time or in bunches of 5. This has
+                    to be set in the options to "Enable Single Item Usage" <br>
+                    <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough</span><span class="green"> Cooked Spider Legs </span> <span class="orange">to complete the quest</span>. Return to the <span class="light-red">Cooking Trainer</span> to complete your task and start a new one. 
                   </p>
+                  <hr> 
+                    <ul>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1,440</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                    </ul>
+                  <hr>
+                 
                   <p class="mt-4 py-3 text-center quest-complete">
                   Quest Complete
                 </p>
